--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -447,32 +447,34 @@ body {
 
 /* line 29, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .full {
-  width: 90%;
-  margin: 0 5% 1% 0; }
+  width: 100%;
+  margin: 0 5% 2% 0; }
 
 /* line 35, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .third {
   width: 20%;
   margin: 5% 0 10% 10%;
   float: left; }
-  /* line 40, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+  /* line 39, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
   .third h2 {
     text-align: center;
     margin: 0 0 35px 0;
     margin: 15px 0 35px 0; }
   /* line 45, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
-  .third img {
-    margin: 0 auto;
-    margin-left: 13%;
-    padding-right: 18px;
-    display: block;
-    opacity: 0.75;
-    transition: opacity 1s; }
-    /* line 52, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
-    .third img:hover {
-      opacity: 1.0; }
+  .third .icon-container {
+    width: 130px;
+    height: 130px;
+    margin: 0 auto; }
+    /* line 49, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+    .third .icon-container img {
+      display: block;
+      opacity: 0.55;
+      transition: opacity 1s; }
+      /* line 53, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+      .third .icon-container img:hover {
+        opacity: 1.0; }
 
-/* line 61, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 63, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 figure img {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -481,30 +483,36 @@ figure img {
   margin: 0 auto;
   margin-top: 50px;
   margin-bottom: 50px; }
-/* line 70, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
-figure figcaption {
-  text-align: center;
-  font-family: "Lato", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  color: #777777; }
 
-/* line 80, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 76, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .large {
   font-size: 48px; }
 
-/* line 84, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 80, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .fade {
   opacity: 0.85;
   -webkit-transition: opacity 2s;
   transition: opacity 2s; }
 
-/* line 90, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 86, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .fade:hover {
   opacity: 1; }
 
-/* line 94, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 90, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .header-title {
   margin: 5%; }
+
+/* line 94, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+.one-edge-shadow {
+  -webkit-box-shadow: 0 8px 6px -6px black;
+  -moz-box-shadow: 0 8px 6px -6px black;
+  box-shadow: 0 8px 6px -6px black; }
+
+/* line 100, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+.round-all {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px; }
 
 /* line 3, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/header.scss */
 .header {
@@ -579,7 +587,7 @@ figure figcaption {
       border-radius: 5px; }
     /* line 17, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
     .contact form input.name, .contact form input.email {
-      width: 45%;
+      width: 44.8%;
       margin: 1%;
       box-sizing: border-box;
       -moz-box-sizing: border-box; }
@@ -595,7 +603,7 @@ figure figcaption {
     .contact form input.button {
       box-sizing: border-box;
       -moz-box-sizing: border-box;
-      width: 93%;
+      width: 92%;
       margin: 1%;
       border: none;
       padding: 15px 25px;
